# sos

./: .gitignore  AGENTS.md  README.md  dune-project  lis-project.opam  report.ms  services.contract  sos.opam  sos.opam.template
.github/workflows/: test-experimental.yml  test-main.yml  test.yml
lib/: ContractLexer.mll  ContractParser.mly  ast.mli  contract.ml  contractAST.ml  contractAST.mli  contractAST_pp.ml  contractLexer.mll  contractParser.mly  dataUtils.ml  dune  expr.ml  exprAST.mli  exprAST_pp.ml  exprParser.mly  expr_pp.ml  functionalStateMonad.ml  lexer.mll  lib.ml  monadState.ml  monadUtils.ml  orchestrator.ml  orchestratorAST.mli  orchestratorAST_pp.ml  orchestratorInterpreter.ml  orchestratorInterpreter.mli  orchestratorLexer.mll  orchestratorParser.mly  orchestratorUtils.ml  orchestratorUtils.mli  parser.mly  policyChecker.ml  simpleLexer.mll  simpleLib.ml  simpleParser.mly  symbolic.ml  symbolicData.ml  symbolicData_pp.ml  symbolicInterpreter.ml  symbolicInterpreter.mli  (+20 more)
lib/contract/: contract.ml  contractAST.mli  contractAST_pp.ml  contractLexer.mll  contractParser.mly  contractTypeChecker.ml  contractTypeChecker.mli  dune  typeCheckContract.ml  typedContractAST.mli  typedContractAST_pp.ml
lib/expr/: dune  expr.ml  exprAST.mli  exprAST_pp.ml  exprParser.mly  exprTypeChecker.ml  exprTypeChecker.mli  typeCheckExpr.ml  typeCheckExpr.mli  typedExprAST.mli  typedExprAST_pp.ml
lib/htmlReport/: dune  htmlReport.ml
lib/htmlReport/res/: index.html  report-model.js  report-render.js  report-utils.js  report.js
lib/manifErrHeuristics/: dune  manifErrHeuristics.ml
lib/manifestError/: dune  manifestError.ml
lib/manifestErrorHeuristics/: dune  manifestErrorHeuristics.ml
lib/orchestrator/: dune  exprInterpreter.ml  exprInterpreter.mli  orchestrator.ml  orchestratorAST.mli  orchestratorAST_pp.ml  orchestratorInterpreter.ml  orchestratorInterpreter.mli  orchestratorLexer.mll  orchestratorParser.mly  orchestratorTypeChecker.ml  orchestratorTypeChecker.mli  typeCheckOrchestrator.ml  typedOrchestratorAST.mli  typedOrchestratorAST_pp.ml
lib/policyChecker/: dune  policyChecker.ml  policyCheckerData.ml  policyCheckerLogic.ml  policyCheckerUtils.ml
lib/reg2dfa/: dfa.ml  dfa.mli  dune  nfa.ml  nfa.mli  regex.ml  regex.mli
lib/stateMonad/: dune  stateMonad.ml  stateMonadCore.ml  stateMonadCore.mli  stateMonadUtils.ml  stateMonadUtils.mli
lib/symbolic/: dune  symbolic.ml  symbolicData.ml  symbolicData_pp.ml  symbolicRuntime.ml  symbolicRuntime_pp.ml
lib/utils/: dataUtils.ml  dataUtils_pp.ml  dune  locUtils.ml  locUtils_pp.ml  parserUtils.ml  resultUtils.ml  scopeUtils.ml  typesUtils.mli  typesUtils_pp.ml  utils.ml
scripts/: run_examples.sh
test/: dune  test_examples.sh
test/contract_examples/: 00_dummy.contract  01_simple_echo.contract  02_account_transfer.contract  03_retry_login.contract  04_inventory_checkout.contract  05_shipping_quote.contract  06_loan_approval.contract  07_subscription_upgrade.contract  08_travel_booking.contract  09_supply_chain.contract  10_healthcare_triage.contract  11_ecommerce.contract  12_healthcare_claims_errors.contract  dummy.contract  ecommerce.contract
test/examples/: invoke_test.example
test/orchestrator_examples/: 00_manifest_test.sos  00_type_check_error.sos  01_simple_echo.example  01_simple_echo.sos  02_account_transfer.example  02_account_transfer.sos  03_retry_login.example  03_retry_login.sos  04_inventory_checkout.example  04_inventory_checkout.sos  05_shipping_quote.example  05_shipping_quote.sos  06_loan_approval.example  06_loan_approval.sos  07_subscription_upgrade.example  07_subscription_upgrade.sos  08_travel_booking.example  08_travel_booking.sos  09_supply_chain.example  09_supply_chain.sos  10_healthcare_triage.example  10_healthcare_triage.sos  11_ecommerce.example  11_ecommerce.sos  12_error_type_check.example  12_healthcare_claims_errors.sos  _00_fuel_test.sos  absolute_value.example  assert_test.example  bounded_decrement.example  division_by_zero.example  ecommerce.example  manifest_test.example  manifest_test.sos
test/policy_checker_test/: dune  test_policy_checker.ml  test_policy_checker_extra.ml
test/policy_examples/: dune  test_policy_checker.ml  test_policy_checker_extra.ml
