(env
 (release
  (menhir
   (flags :standard --strict))))

(ocamllex
 (modules orchestratorLexer))

(ocamllex
 (modules contractLexer))

(menhir
 (modules orchestratorParser exprParser)
 (merge_into orchestratorParser))

(menhir
 (modules contractParser exprParser)
 (merge_into contractParser)
 (flags --unused-token NONDET))

(library
 (name expr)
 (modules expr exprAST exprAST_pp)
 (modules_without_implementation exprAST)
 (libraries utils))

(library
 (name utils)
 (modules utils parserUtils dataUtils))

(library
 (name symbolic)
 (modules
  symbolic
  symbolicData
  symbolicRuntime
  symbolicData_pp
  symbolicRuntime_pp)
 (libraries soteria expr contract utils))

(library
 (name contract)
 (modules contract contractAST contractAST_pp contractLexer contractParser)
 (modules_without_implementation contractAST)
 (libraries expr utils))

(library
 (name symbolicMonad)
 (modules symbolicMonad monadState monadUtils)
 (preprocess
  (pps soteria.ppx))
 (libraries symbolic))

(library
 (name orchestrator)
 (modules
  orchestrator
  orchestratorAST
  orchestratorAST_pp
  orchestratorLexer
  orchestratorParser
  orchestratorInterpreter)
 (modules_without_implementation orchestratorAST)
 (libraries expr contract symbolic symbolicMonad policyChecker utils)
 (preprocess
  (pps soteria.ppx))
 (flags :standard -open Soteria.Logs.Import))

(library
 (name policyChecker)
 (modules policyChecker)
 (libraries contract symbolic reg2dfa)
 (preprocess
  (pps soteria.ppx)))
