(env
 (release
  (menhir
   (flags :standard --strict))))

(ocamllex
 (modules orchestratorLexer))

(ocamllex
 (modules contractLexer))

(menhir
 (modules orchestratorParser exprParser)
 (merge_into orchestratorParser))

(menhir
 (modules contractParser exprParser)
 (merge_into contractParser)
 (flags --unused-token NONDET))

(library
 (name expr)
 (modules expr exprAST exprAST_pp)
 (modules_without_implementation exprAST)
 (libraries utils))

(library
 (name typedExpr)
 (modules typedExpr typedExprAST typedExprAST_pp)
 (modules_without_implementation typedExprAST)
 (libraries utils))

(library
 (name contract)
 (modules contract contractAST contractAST_pp contractLexer contractParser)
 (modules_without_implementation contractAST)
 (libraries expr utils))

(library
 (name typedContract)
 (modules typedContract typedContractAST typedContractAST_pp)
 (modules_without_implementation typedContractAST)
 (libraries expr typedExpr contract utils))

(library
 (name typedOrchestrator)
 (modules typedOrchestrator typedOrchestratorAST typedOrchestratorAST_pp)
 (modules_without_implementation typedOrchestratorAST)
 (libraries
  typedExpr
  typedContract
  symbolic
  symbolicMonad
  policyChecker
  utils))

(library
 (name typeCheckExpr)
 (modules typeCheckExpr)
 (libraries utils expr typedExpr contract))

(library
 (name symbolic)
 (modules
  symbolic
  symbolicData
  symbolicRuntime
  symbolicData_pp
  symbolicRuntime_pp)
 (libraries soteria expr contract utils))

(library
 (name symbolicMonad)
 (modules symbolicMonad symbolicMonadState symbolicMonadUtils)
 (preprocess
  (pps soteria.ppx))
 (libraries symbolic))

(library
 (name policyChecker)
 (modules policyChecker)
 (libraries contract symbolic reg2dfa)
 (preprocess
  (pps soteria.ppx)))

(library
 (name typeCheckExpr)
 (modules typeCheckExpr)
 (libraries fmt utils expr typedExpr contract))

(library
 (name typeCheckContract)
 (modules typeCheckContract)
 (libraries fmt utils expr typedExpr contract typedContract typeCheckExpr))
