(env
 (release
  (menhir
   (flags :standard --strict))))

(ocamllex
 (modules orchestratorLexer))

(ocamllex
 (modules contractLexer))

(menhir
 (modules orchestratorParser exprParser)
 (merge_into orchestratorParser))

(menhir
 (modules contractParser exprParser)
 (merge_into contractParser)
 (flags --unused-token NONDET))

(library
 (name expr)
 (modules expr exprAST exprAST_pp typedExprAST typedExprAST_pp typeCheckExpr)
 (modules_without_implementation exprAST typedExprAST)
 (libraries fmt utils))

(library
 (name contract)
 (modules
  contract
  contractAST
  contractAST_pp
  contractLexer
  contractParser
  typedContractAST
  typedContractAST_pp
  typeCheckContract)
 (modules_without_implementation contractAST typedContractAST)
 (libraries expr utils))

(library
 (name orchestrator)
 (modules
  orchestrator
  orchestratorAST
  orchestratorAST_pp
  orchestratorLexer
  orchestratorParser
  orchestratorInterpreter
  typedOrchestratorAST
  typedOrchestratorAST_pp
  typeCheckOrchestrator)
 (modules_without_implementation orchestratorAST typedOrchestratorAST)
 (libraries expr contract symbolic symbolicMonad policyChecker utils)
 (preprocess
  (pps soteria.ppx))
 (flags :standard -open Soteria.Logs.Import))

(library
 (name symbolic)
 (modules
  symbolic
  symbolicData
  symbolicRuntime
  symbolicData_pp
  symbolicRuntime_pp)
 (libraries soteria expr contract utils))

(library
 (name symbolicMonad)
 (modules symbolicMonad symbolicMonadState symbolicMonadUtils)
 (preprocess
  (pps soteria.ppx))
 (libraries symbolic utils))

(library
 (name policyChecker)
 (modules policyChecker)
 (libraries contract symbolic reg2dfa)
 (preprocess
  (pps soteria.ppx)))

(library
 (name utils)
 (modules utils parserUtils dataUtils)
 (libraries fmt))
